fix: search berdasarkan id kajian
